June 16 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added equipment pictures to panel
	* The config system of items and characters works now correctly (I think).
	  This means that one can add new equipment or monsters without touching code at all,
	  using one of the existing classes as a base
	* Converted almost all weapons to configurations of meleeweapon.
	  Weapons not converted: pickaxe (special, can dig), whip (special, FormModifier depends on material),
	  Valpurus's Justifier and Neerc Se-Ulb (artifacts, will get animation functions soon)
	* Converted chain mail, amulets, rings and boots to configurations of their base classes
	* Added possibility to specify config in script in brackets following a classname
	  (example: Square, Pos 3,1; { Item = boot(BOOTOFSPEED); Times = 2; } adds two boots of speed to square at 3,1)
	* Removed the former way to set it

June 15 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added a new state system that allows both temporary and permanent states
	* Added GearStates item database value that allows one to easily add equipment that activate permanent states
	* Added PermanentStates character database value that makes it easy to add permanent states to certain races
	* Added boot of speed that hastes the user (but you need to have two of them equipped!)
	* Added a bug that activates permanent states when the user wields the right piece of equipment, like a boot of speed
	  (by the way, this bug did already exist with amulets of life saving)
	* Monsters are now polymorphed only temporarily in the same way as the player,
	  so you don't have to kill yourself when that goblin zaps its WoP at your ultra-trained level 8 mistress
	  (when it someday becomes wise enough to do it)
	* Added lycanthropy state that occasionally polymorphs the character into a werewolf (wolf form)
	* Werewolf flesh causes lycanthropy now
	* Remade werewolf; it is now a human-like creature that is permanently lycanthropic