@@ -154,17 +154,17 @@ template <class type> uchar CountCorrectNameParts(const typename type::database&
   return Counter;
 }
 
-template <class type> std::pair<const type::prototype*, ushort> SearchForProto(const std::string& What, bool Output)
+template <class type> std::pair<const typename type::prototype*, ushort> SearchForProto(const std::string& What, bool Output)
 {
   std::string Identifier = " " + What + " ";
   bool Illegal = false;
-  std::pair<const type::prototype*, ushort> Id(0, 0);
+  std::pair<const typename type::prototype*, ushort> Id(0, 0);
   ushort Best = 0;
 
   for(ushort c = 1; c < protocontainer<type>::GetProtoAmount(); ++c)
     {
-      const type::prototype* Proto = protocontainer<type>::GetProto(c);
-      const type::databasemap& Config = Proto->GetConfig();
+      const typename type::prototype* Proto = protocontainer<type>::GetProto(c);
+      const typename type::databasemap& Config = Proto->GetConfig();
 
       ushort Correct = CountCorrectNameParts<type>(*Proto->GetDataBase(), Identifier);
 
@@ -178,7 +178,7 @@ template <class type> std::pair<const type::prototype*, ushort> SearchForProto(c
 	else
 	  Illegal = true;
 
-      for(type::databasemap::const_iterator i = Config.begin(); i != Config.end(); ++i)
+      for(typename type::databasemap::const_iterator i = Config.begin(); i != Config.end(); ++i)
 	{
 	  Correct = CountCorrectNameParts<type>(i->second, Identifier);
 
