@@ -1,3 +1,7 @@
+June 16 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Priests in altars now attach old arms and legs to their old places. 
+
 June 16 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Added equipment pictures to panel
